theme/totara/styles_ie7.css
/*
 * These styles are ONLY included for IE7 (via meta.php)
 */

input[type="submit"],
input[type="button"],
button,
.ui-state-default,
.ui-widget-content button.ui-state-default {
    border: 0px;
}

/* Fix for selects which ignore z-index rules */
.hidden_select_ie {
    display: none;
}

/**
 * Tabrow multi-tiered navigation
 **/
.tabrow0{
    line-height: 2.9em;
}
.tabrow0 div, .tabrow0 ul {
    top: 3.3em;
}
.tabrow0 a:link,
.tabrow0 a:visited,
.tabrow0 a:hover {
    background-position: 0 4px !important;
}
.tabrow0 a.nolink:hover {
    background-position: 0 0 !important;
}

/**
 * Fixing the tree dialogs
 **/
div.totara-dialog div.yui-isloading {
    background-position: 675px 0px;
}

div.totara-dialog table.dialog-content {
	width:96% !important;
}

/**
 * My Team - Manager role
 **/
th.user_namewithlinks {
    width: 40%;
}
td.user_namewithlinks div.picture a:link,
td.user_namewithlinks div.picture a:hover,
td.user_namewithlinks div.picture a:visited,
td.user_namewithlinks div.picture span.username {
    float: left;
    min-height: 35px;
    line-height: 35px;
    vertical-align: middle;
}
td.user_namewithlinks div.links {
clear: both;
}

